# card_game

./: .gitignore  Cargo.toml
assets/: card.blend  card.gltf
assets/cards/: Barter-World.card.ron  Battle-Blob.card.ron  Battle-Mech.card.ron  Battle-Pod.card.ron  Battle-Station.card.ron  Battlecruiser.card.ron  Blob-Carrier.card.ron  Blob-Destroyer.card.ron  Blob-Fighter.card.ron  Blob-Wheel.card.ron  Blob-World.card.ron  Brain-World.card.ron  Central-Office.card.ron  Command-Ship.card.ron  Corvette.card.ron  Cutter.card.ron  Defense-Center.card.ron  Dreadnaught.card.ron  Embassy-Yacht.card.ron  Explorer.card.ron  Federation-Shuttle.card.ron  Flagship.card.ron  Fleet-HQ.card.ron  Freighter.card.ron  Imperial-Fighter.card.ron  Imperial-Frigate.card.ron  Junkyard.card.ron  Machine-Base.card.ron  Mech-World.card.ron  Missile-Bot.card.ron  Missile-Mech.card.ron  MotherShip.card.ron  Patrol-Mech.card.ron  Port-of-Call.card.ron  Ram.card.ron  Recycling-Station.card.ron  Royal-Redoubt.card.ron  Scout.card.ron  Space-Station.card.ron  Stealth-Needle.card.ron  (+9 more)
assets/lang/: en.lang.ron
assets/sets/debug_bases/: market.deck.ron  player.deck.ron
assets/sets/default/: explorer.deck.ron  (+2 more)
src/: debug.rs  main.rs  ray_caster.rs
src/cards/: click.rs  mod.rs  spawn.rs  transition.rs  transitions_transforms.rs
src/game/: events.rs  mod.rs
src/players/: mod.rs  ui.rs
src/stacks/: mod.rs
src/states/: app.rs  mod.rs  turn.rs
src/ui/: billboards.rs  choice_ui.rs  mod.rs  player_counters.rs
src/utils/: debug.rs  filter_enum.rs  font3d.rs  mod.rs  ray_caster.rs
(+32 files in other folders)
