[package]
name = "card_game_4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies.bevy]
version = "0.12.1"
features = [
    "jpeg",
]

[dependencies.bevy-inspector-egui]
version = "0.22.1"

[dependencies]
rand = "0.8.5"
ron = "0.8.1"
serde = "1.0.188"
thiserror = "1.0.48"
bevy_rapier3d = "0.23.0"