[package]
name = "card_game_4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies.bevy]
version = "0.13.2"
features = [
    "jpeg",
]

[dependencies.bevy-inspector-egui]
version = "0.23.2"

[dependencies.meshtext]
version = "0.3.0"
features = ["owned"]

[dependencies]
rand = "0.8.5"
ron = "0.8.1"
serde = "1.0.196"
thiserror = "1.0.57"
bevy_rapier3d = "0.25.0"
regex = "1.10.3"
bevy_mod_billboard = "0.5.1"